Bug #7105
closedSocket documentation fix
Description
The "Quick start" section of the Socket documentation refers to the Socket::INET constant, which doesn't exist. I've attached a small patch changing the reference to Socket::AF_INET, which seems consistent with the rest of the documentation (the alternative would be Socket::PF_INET, which has the same value).
Files
Updated by zzak (zzak _) almost 14 years ago
- Assignee set to zzak (zzak _)
- Target version set to 2.0.0
Updated by zzak (zzak _) almost 14 years ago
Hello,
I've discussed this with another mri committer, and we've come to the conclusion that the example should use AF_INET, as socket(2) suggests:
"The manifest constants used under 4.x BSD for protocol families are PF_UNIX, PF_INET, etc., while AF_UNIX etc. are used for address families. However, already the BSD man page promises: "The protocol family generally is the same as the address family", and subsequent standards use AF_* everywhere."
PF_INET is just an alias.
I will commit this patch if there are no obligations. Thank you for your contribution David.
Updated by zzak (zzak _) almost 14 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r37274.
David, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
- ext/socket/socket.c: Documentation for Socket
Based on a patch by David Albert
[Bug #7105] [ruby-core:47828]