* ext/socket/socket.c: Documentation for Socket   Based on a patch by David Albert   [Bug #7105] [ruby-core:47828]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37274 b2dd03c8-39d4-4d8f-98ff-823fe69b080e